# poc-ghc-object-code

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  ghc-object-code-rebuild.cabal  poc-ghc-object-code.cabal
src/: MyLib.hs
test/: FooSpec.hs  Main.hs
