cabal-version:      3.0
name:               poc-ghc-object-code
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             HW
maintainer:         haisheng@mercury.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite poc-ghc-object-code-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        poc-ghc-object-code

library test-dev
    import:           warnings
    exposed-modules:  MyLib
                      FooSpec
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
    hs-source-dirs:   src
                      test
    default-language: Haskell2010
